# image_processor_cpp

./: CMakeLists.txt  README.md  image_processor.cpp
classes/: filters.cpp  image.cpp  open_save.cpp  rgb.cpp
filters/crop/: crop.cpp
filters/edge/: edge.cpp
filters/gaussianblur/: gaussianblur.cpp
filters/grayscale/: grayscale.cpp
filters/negative/: negative.cpp
filters/sharpening/: sharpening.cpp
filters/vortexdistortion/: vortexdistortion.cpp
filters/waves/: waves.cpp
headers/: filters.h  image.h  open_save.h  parser.h  rgb.h
parser/: parser.cpp
